# minesweeper

./: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: android.yml  deploy.yml  windows.yml
docs/superpowers/: v2.2-roadmap.md
scripts/: android-release.mjs  make-icons.mjs  test-pwa-update.mjs  version.mjs  windows-release.ps1
src/: main.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src/core/: board.ts  endless.ts  generator.ts  levels.ts  rng.ts  solver.ts  storage.ts
src/ui/: audio.ts  board-grid.ts  focus.ts  format.ts  game.ts  home-liquid-selection.ts  home.ts  liquid-glass.css  liquid-glass.ts  menu.ts  motion.ts  persistence-warning.ts  pwa-prompt.ts  pwa-update.ts  result.ts  style.css  ui-prefs.ts  viewport.ts  vine.ts
tests/: android-config.test.ts  android-release-contract.test.ts  audio.test.ts  board-grid.test.ts  board.test.ts  config.test.ts  contrast.test.ts  endless.test.ts  game-accessibility.test.ts  gen-bench.test.ts  generator.test.ts  home-liquid-selection.test.ts  home.test.ts  levels.test.ts  liquid-glass.test.ts  main.test.ts  motion.test.ts  persistence-warning.test.ts  pwa-config.test.ts  pwa-prompt.test.ts  pwa-update.test.ts  result-accessibility.test.ts  solver.test.ts  storage.test.ts  style.test.ts  ui-prefs.test.ts  ui.test.ts  version-script.test.ts  version.test.ts  viewport.test.ts  vine.test.ts  windows-release-contract.test.ts  workflows.test.ts
tests/e2e/: v2.3-ui.e2e.ts  (+1 more)
(+24 files in other folders)
